* FEA#7663 Manage a SEPA debtor other than the company
* FEA#7663 Allow to set a SEPA creditor other than company on payment journal
* BUG#7569 Fix crash of SEPA fail batch

Version 1.14 - 2017-11-09
* BUG#7346 Add configuration to enable the SEPA amendment feature
* FEA#7246 Add payments as a linked record to party
* BUG#7058 Amendments should return a compact IBAN
* BUG#6999 Remove party from payment group key
* BUG#6939 Fix the domain of the SEPA message generation button
* FEA#5500 New sepa standard: Rulebooks SDD Core V9.0 and SDD B2B V7.0: only generate 'RCUR' sepa payment sequence type and remove 'FRST' type
* BUG#6107 The bank account is now invisible in the payment creation wizard when the process method is not SEPA
* BUG#6817 Remove party from payment group key
* OTH#0000 Complement #6792
* BUG#6792 Manage non-SEPA payments in merged payments entry point
* BUG#6624 Use a mono-line address in sepa messages
* FEA#6541 Support payments groups deletion and update the last sepa date on journal
* OTH#0000 Properly hide "Generate Message" button when it is not a SEPA payment group
* BUG#6345 regroup SEPA payments by mandate or payer for batch processing
* FEA#6441 Automatically search for mandates by their party / account number
* FEA#0000 Split the payment fail batch to improve performances
* FEA#0000 Add a batch chain for parallelizable payment treatment
* FEA#0000 Display Full Name (First Name + Last Name) in SEPA files
* FEA#0000 Manage payer for all payment kinds
* FEA#6172 Allow to add single payments information in remittance information

Version 1.12 - 2017-04-28
* FEA#0000 Replace process batch with batch that calls the 'do' method on sepa messages
* FEA#0000 Rename the xml file of a payments group message into 'group.rec_name + group.journal.name + group.kind + group.payment_date' with payment_date only added if there is only exactly one
* FEA#0000 Add the chain batch

Version 1.10 - 2016-11-02