@@ -18,3 +18,4 @@ xml:
     authorizations.xml
 extras_depend:
     bank_fr
+    account_payment_sepa_cfonb
