@@ -1,3 +1,4 @@
+* BUG#7904 Implement amendment informations also for CFONB
 * FEA#7663 Manage a SEPA debtor other than the company
 * FEA#7663 Allow to set a SEPA creditor other than company on payment journal
 * BUG#7569 Fix crash of SEPA fail batch
